mat sidenav and mat tree

--- a/src/app/ares-users/components/dashboard/dashboard.component.css
+++ b/src/app/ares-users/components/dashboard/dashboard.component.css
@@ -1,9 +1,15 @@
 .dashboard {
-  margin: 0 auto;
-  min-width: 600px;
-  width: 50%;
+  min-width: 300px;
+  width: 20%;
+  min-height: 10vh;
+  font-family: Monospace;
 }
 
 mat-card-title {
   text-align: center;
+}
+
+.wrapper{
+  width: 100vw;
+  padding: 10vh;
 }
