--- a/src/app/ares-users/components/login/login.component.css
+++ b/src/app/ares-users/components/login/login.component.css
@@ -14,3 +14,17 @@ form {
 mat-card-footer {
   padding-left: 20px;
 }
+
+.body {
+  margin: 0;
+}
+
+.display-header {
+  text-align: center;
+  color: #ccc;
+  font-size: 4rem;
+}
+
+.text-center {
+  text-align: center;
+}
