--- a/src/app/ares-users/components/login/login.component.html
+++ b/src/app/ares-users/components/login/login.component.html
@@ -1,3 +1,9 @@
+<div class="m-x-auto">
+  <h1 class="display-header">
+    <i class="fa fa-coins"></i>
+    &nbsp;&nbsp;
+    <i class="fab fa-btc"></i>itparx</h1>
+</div>
 <mat-card>
   <mat-card-title>Login</mat-card-title>
   <form (ngSubmit)="onSubmit(username.value, password.value); loginform.reset();" #loginform fxLayout="column" fxLayoutAlign="center center">
