--- a/src/app/ares-users/components/navbar/navbar.component.css
+++ b/src/app/ares-users/components/navbar/navbar.component.css
@@ -12,3 +12,12 @@
 .navbar-brand{
   text-decoration : none;
 }
+
+mat-toolbar{
+  font-weight: 900;
+}
+
+a,i{
+  text-decoration: none;
+  color: white;
+}
