--- a/src/app/ares-users/components/dashboard/dashboard.component.html
+++ b/src/app/ares-users/components/dashboard/dashboard.component.html
@@ -1,37 +1,42 @@
-<mat-card class="dashboard">
-  <mat-card-title> Dashboard</mat-card-title>
-  <mat-card-content>
-    <h1> Backend User Stuff </h1>
-    <div fxLayout="row" fxLayoutWrap fxLayoutGap="10px" fxLayoutAlign="center center">
-      <!--<a mat-button routerLink="/profile"> Profile </a>-->
-      <a mat-button routerLink="/profile"> Profile </a>
-      <a mat-button routerLink="/users" *ngIf="checklevel('admin')|async"> List of Local Users </a>
-    </div>
+<div fxLayout="row wrap" fxLayoutAlign="center center" fxLayoutGap="25px" class="wrapper">
+  <mat-card class="dashboard primary" *ngFor="let tile of tiles">
+    <mat-card-title>{{tile.name}}</mat-card-title>
+    <mat-card-content *ngIf="checklevel('hospitality') | async" fxLayoutAlign="center center">
+      <button mat-raised-button [routerLink]="tile.link"> View</button>
+    </mat-card-content>
+  </mat-card>
+</div>
+<!--<mat-card-content>-->
+<!--<h1> Backend User Stuff </h1>-->
+<!--<div fxLayout="row" fxLayoutWrap fxLayoutGap="10px" fxLayoutAlign="center center">-->
+<!--&lt;!&ndash;<a mat-button routerLink="/profile"> Profile </a>&ndash;&gt;-->
+<!--<a mat-button routerLink="/profile"> Profile </a>-->
+<!--<a mat-button routerLink="/users" *ngIf="checklevel('admin')|async"> List of Local Users </a>-->
+<!--</div>-->
 
-    <h1> Users Stuff </h1>
-    <div fxLayout="row" fxLayoutWrap fxLayoutGap="10px" fxLayoutAlign="center center"
-         *ngIf="checklevel('hospitality') | async">
-      <a mat-button routerLink="/userinfo"> List of Users </a>
-    </div>
-    <div fxLayout="row" fxLayoutWrap fxLayoutGap="10px" fxLayoutAlign="center center"
-         *ngIf="checklevel('synchronicity') | async">
-      <a mat-button routerLink="/roadtrips"> Synchronicity </a>
-    </div>
-    <h2> Campus Ambassador Stuff </h2>
-    <div fxLayout="row" fxLayoutWrap fxLayoutGap="10px" fxLayoutAlign="center center">
-      <a mat-button routerLink="/calist"> List of Campus Ambassadors </a>
-      <a mat-button routerLink="/ideas"> Verify Ideas </a>
-    </div>
-    <h2 *ngIf="checklevel('hospitality') | async"> Mainfest Stuff </h2>
-    <div fxLayout="row" fxLayoutWrap fxLayoutGap="10px" fxLayoutAlign="center center"
-         *ngIf="checklevel('hospitality') | async">
-      <a mat-button routerLink="/mainfest"> List of Registered Users </a>
-      <a mat-button routerLink="/payments"> Verify Payments </a>
-    </div>
+<!--<h1> Users Stuff </h1>-->
+<!--<div fxLayout="row" fxLayoutWrap fxLayoutGap="10px" fxLayoutAlign="center center"-->
+<!--*ngIf="checklevel('hospitality') | async">-->
+<!--<a mat-button routerLink="/userinfo"> List of Users </a>-->
+<!--</div>-->
+<!--<div fxLayout="row" fxLayoutWrap fxLayoutGap="10px" fxLayoutAlign="center center"-->
+<!--*ngIf="checklevel('synchronicity') | async">-->
+<!--<a mat-button routerLink="/roadtrips"> Synchronicity </a>-->
+<!--</div>-->
+<!--<h2> Campus Ambassador Stuff </h2>-->
+<!--<div fxLayout="row" fxLayoutWrap fxLayoutGap="10px" fxLayoutAlign="center center">-->
+<!--<a mat-button routerLink="/calist"> List of Campus Ambassadors </a>-->
+<!--<a mat-button routerLink="/ideas"> Verify Ideas </a>-->
+<!--</div>-->
+<!--<h2 *ngIf="checklevel('hospitality') | async"> Mainfest Stuff </h2>-->
+<!--<div fxLayout="row" fxLayoutWrap fxLayoutGap="10px" fxLayoutAlign="center center"-->
+<!--*ngIf="checklevel('hospitality') | async">-->
+<!--<a mat-button routerLink="/mainfest"> List of Registered Users </a>-->
+<!--<a mat-button routerLink="/payments"> Verify Payments </a>-->
+<!--</div>-->
 
-    <h1> Content Management </h1>
-    <div fxLayout="row" fxLayoutWrap fxLayoutGap="10px" fxLayoutAlign="center center">
-      <a mat-button routerLink="/manage" fxFlex=""> Contents Manager </a>
-    </div>
-  </mat-card-content>
-</mat-card>
+<!--<h1> Content Management </h1>-->
+<!--<div fxLayout="row" fxLayoutWrap fxLayoutGap="10px" fxLayoutAlign="center center">-->
+<!--<a mat-button routerLink="/manage" fxFlex=""> Contents Manager </a>-->
+<!--</div>-->
+<!--</mat-card-content>-->
