--- a/src/app/utility/material-tree/material-tree.component.html
+++ b/src/app/utility/material-tree/material-tree.component.html
@@ -1,7 +1,8 @@
-<mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="lighter">
-  <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle matTreeNodePadding>
+<mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="light">
+  <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle matTreeNodePadding class="light" [routerLink]="node.type">
     <button mat-icon-button disabled></button>
-    {{node.filename}} : {{node.type}}
+    <i class="fas fa-bookmark secondary-text"></i>
+     {{node.filename}}
   </mat-tree-node>
 
   <mat-tree-node *matTreeNodeDef="let node;when: hasChild" matTreeNodePadding matTreeNodeToggle>
@@ -11,6 +12,6 @@
         {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
       </mat-icon>
     </button>
-    {{node.filename}} : {{node.type}}
+    {{node.filename}}{{node.type}}
   </mat-tree-node>
 </mat-tree>
