--- a/src/styles.css
+++ b/src/styles.css
@@ -43,14 +43,25 @@ body{
   background-color: #00a38a;
 }
 
+.primary-text{
+  color: #cbe091;
+}
+
+.secondary-text{
+  color: #00a38a;
+}
 .light{
-  background-color: rgba(255,255,255,0.3);
+  background-color: rgba(255,255,255,0.2);
 }
 
 .lighter{
-  background-color: rgba(255,255,255,0.5);
+  background-color: rgba(255,255,255,0.4);
 }
 
 .lightest{
-  background-color: rgba(255,255,255,0.7);
+  background-color: rgba(255,255,255,0.6);
+}
+
+.bg-transparent{
+  background: transparent;
 }
