--- a/src/app/utility/material-table/material-table.component.html
+++ b/src/app/utility/material-table/material-table.component.html
@@ -1,7 +1,7 @@
 <button mat-raised-button (click)="excel()">Download Excel</button>
 
 <div class="tablewrapper">
-  <mat-table #table [dataSource]="dataSource">
+  <mat-table #table [dataSource]="dataSource|async">
 
     <ng-container *ngFor="let field of fields; let i = index" [matColumnDef]="field">
       <mat-header-cell *matHeaderCellDef> {{field}} </mat-header-cell>
@@ -22,5 +22,5 @@
     <mat-header-row *matHeaderRowDef="['sno'].concat(fields)"></mat-header-row>
     <mat-row *matRowDef="let row; columns: ['sno'].concat(fields);"></mat-row>
   </mat-table>
-
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
 </div>
