--- a/src/app/common/navbar-sidenav/users.component.css
+++ b/src/app/common/navbar-sidenav/users.component.css
@@ -1,7 +1,6 @@
 .users {
   margin: 10vh auto;
-  min-width: 500px;
-  width: 60%;
+  min-width: 60%;
 }
 
 mat-card-title {
@@ -15,4 +14,8 @@ mat-drawer{
 
 mat-drawer-container{
   min-height: 90vh;
+}
+
+mat-card-content{
+  overflow: auto;
 }
